// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeviceTile /> renders a device with no metadata 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <div
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          role="img"
        />
      </div>
      <div
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        role="img"
      />
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> renders a verified device with no metadata 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <div
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          role="img"
        />
      </div>
      <div
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        role="img"
      />
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> renders display name with a tooltip 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <div
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          role="img"
        />
      </div>
      <div
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        role="img"
      />
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        My device
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> separates metadata with a dot 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <div
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          role="img"
        />
      </div>
      <div
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        role="img"
      />
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-lastActivity"
        >
          Last activity 15:13
        </span>
         · 
        <span
          data-testid="device-metadata-lastSeenIp"
        >
          1.2.3.4
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;
